[gd_scene load_steps=11 format=2]

[ext_resource path="res://Level/Level 3.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 23.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16, 19.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 95.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 107.75, 27.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 518.5, 4.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.5, 306 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 525.5, 10.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6.5, 311 )

[node name="Level 3" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1027.0
margin_bottom = 601.0

[node name="HostageSpawn" type="Position2D" parent="CenterContainer"]
position = Vector2( 130, 284 )

[node name="PlayerSpawn" type="Position2D" parent="CenterContainer"]
position = Vector2( 514, 572 )

[node name="Wall1" type="StaticBody2D" parent="CenterContainer"]
position = Vector2( 814, 466 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="CenterContainer/Wall1"]
scale = Vector2( 108.5, 22 )
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/Wall1"]
shape = SubResource( 9 )

[node name="Wall3" type="StaticBody2D" parent="CenterContainer"]
position = Vector2( 862, 271 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="CenterContainer/Wall3"]
position = Vector2( 3.5, 0 )
scale = Vector2( 16.5, 22 )
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/Wall3"]
position = Vector2( 3, 0 )
shape = SubResource( 9 )

[node name="Wall4" type="StaticBody2D" parent="CenterContainer"]
position = Vector2( 79, 463 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="CenterContainer/Wall4"]
position = Vector2( 3.5, 0 )
scale = Vector2( 16.5, 22 )
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/Wall4"]
position = Vector2( 3, 0.5 )
shape = SubResource( 11 )

[node name="Wall5" type="StaticBody2D" parent="CenterContainer"]
position = Vector2( 506, 418 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="CenterContainer/Wall5"]
position = Vector2( 3.5, -27 )
scale = Vector2( 16.5, 97 )
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/Wall5"]
position = Vector2( 3, -26.5 )
shape = SubResource( 12 )

[node name="Wall2" type="StaticBody2D" parent="CenterContainer"]
position = Vector2( 189, 85 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="CenterContainer/Wall2"]
scale = Vector2( 107.5, 26 )
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/Wall2"]
shape = SubResource( 10 )

[node name="OuterWalls" type="StaticBody2D" parent="CenterContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/OuterWalls"]
position = Vector2( 508.5, -5.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CenterContainer/OuterWalls"]
position = Vector2( -4.5, 296 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CenterContainer/OuterWalls"]
position = Vector2( 514.5, 612.5 )
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CenterContainer/OuterWalls"]
position = Vector2( 1032.5, 299 )
shape = SubResource( 8 )

[node name="BlockMovingTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="BlockMovingTimer" to="." method="_on_BlockMovingTimer_timeout"]
